Fix overflow scroll

--- a/src/Components/PostsBox/PostsBox.css
+++ b/src/Components/PostsBox/PostsBox.css
@@ -1,3 +1,4 @@
 .post-block {
   overflow-y: scroll;
+  height: 400px;
 }
